# misis2024s-23-18-elisova-a-a

./: .gitignore  CMakeLists.txt  codeforces.id  reports.md  status.md
enc_temp_folder/a13823391fdc3cee24e281e7b6d39932/: 1367c.cpp
prj.app/: CMakeLists.txt
prj.app/robocalc/: CMakeLists.txt  commands.txt  robocalc.cpp
prj.app/timing_q/: CMakeLists.txt  timing_q.cpp
prj.codeforces/: 0000.cpp  0004c.cpp  0025a.cpp  0158b.cpp  0189a.cpp  0230b.cpp  0270a.cpp  0313b.cpp  0327a.cpp  0368b.cpp  0379a.cpp  0466a.cpp  0478a.cpp  0483a.cpp  0492b.cpp  0706b.cpp  0835b.cpp  0919b.cpp  1249c1.cpp  1327a.cpp  1335c.cpp  1352c.cpp  1352d.cpp  1360c.cpp  1363a.cpp  1367c.cpp  1420b.cpp  1472d.cpp  1490c.cpp  1702c.cpp  1703f.cpp  1733c.cpp  1826a.cpp  1826b.cpp  1826c.cpp  1826d.cpp  CMakeLists.txt
prj.lab/: CMakeLists.txt
prj.lab/bitset/: bitset.cpp  bitset.hpp
prj.lab/complex/: complex.cpp  complex.hpp
prj.lab/dynarr/: dynarr.cpp  dynarr.hpp
prj.lab/queue/: CMakeLists.txt  queue.hpp
prj.lab/queuearr/: CMakeLists.txt  queuearr.cpp  queuearr.hpp
prj.lab/queuearrt/: CMakeLists.txt  queuearrt.hpp
prj.lab/queuelst/: CMakeLists.txt  queuelst.cpp  queuelst.hpp
prj.lab/queuelstpr/: CMakeLists.txt  queuelstpr.cpp  queuelstpr.hpp
prj.lab/queuelstprt/: CMakeLists.txt  queuelstprt.hpp
prj.lab/queuelstt/: CMakeLists.txt  queuelstt.hpp
prj.lab/rational/: rational.cpp  rational.hpp
prj.lab/stack/: CMakeLists.txt  stack.cpp  stack.hpp
prj.lab/stackarr/: CMakeLists.txt  stackarr.cpp  stackarr.hpp
prj.lab/stackarrt/: CMakeLists.txt  stackarrt.hpp
prj.lab/stacklst/: CMakeLists.txt  stacklst.cpp  stacklst.hpp
prj.lab/stacklstt/: CMakeLists.txt  stacklstt.hpp
prj.test/: CMakeLists.txt  test_bitset.cpp  test_complex.cpp  test_dynarr.cpp  test_queuearr.cpp  test_queuearrt.cpp  test_queuelst.cpp  test_queuelstpr.cpp  test_queuelstprt.cpp  test_queuelstt.cpp  test_rational.cpp  test_stack.cpp  test_stackarr.cpp  test_stackarrt.cpp  test_stacklst.cpp  test_stacklstt.cpp  vector.h  vectort.h
