add_executable (0379a 0379a.cpp)
add_executable (0158b 0158b.cpp)
add_executable (0706b 0706b.cpp)
add_executable (0270a 0270a.cpp)
add_executable (0313b 0313b.cpp)
add_executable (0835b 0835b.cpp)
add_executable (1327a 1327a.cpp)
add_executable (1360c 1360c.cpp)
add_executable (0368b 0368b.cpp)
add_executable (0919b 0919b.cpp)
add_executable (0478a 0478a.cpp)
add_executable (0492b 0492b.cpp)