add_executable (0379a 0379a.cpp)
add_executable (0158b 0158b.cpp)
add_executable (0706b 0706b.cpp)
add_executable (0270a 0270a.cpp)
add_executable (0313b 0313b.cpp)
add_executable (0835b 0835b.cpp)
add_executable (1327a 1327a.cpp)
add_executable (1360c 1360c.cpp)
add_executable (0368b 0368b.cpp)
add_executable (0919b 0919b.cpp)
add_executable (0478a 0478a.cpp)
add_executable (0492b 0492b.cpp)
add_executable (0327a 0327a.cpp)
add_executable (1420b 1420b.cpp)
add_executable (0466a 0466a.cpp)
add_executable (1352c 1352c.cpp)
add_executable (1352d 1352d.cpp)
add_executable (0483a 0483a.cpp)
add_executable (1335c 1335c.cpp)
add_executable (1490c 1490c.cpp)
add_executable (1702c 1702c.cpp)
add_executable (1363a 1363a.cpp)
add_executable (1472d 1472d.cpp)
add_executable (1826a 1826a.cpp)
add_executable (1826b 1826b.cpp)
add_executable (1826c 1826c.cpp)
add_executable (1826d 1826d.cpp)
add_executable (0025a 0025a.cpp)
add_executable (0004c 0004c.cpp)
add_executable (0230b 0230b.cpp)
add_executable (1367c 1367c.cpp)
add_executable (0189a 0189a.cpp)
add_executable (1703f 1703f.cpp)
add_executable (1249c1 1249c1.cpp)